--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <textarea cols="30" rows="10" class="note" placeholder="Empty Note"></textarea>
         <button class="btn" id="btn"></button>
     </div>
-
+    <script src="index.js"></script>
 </body>
 </html>
 
